# synapse-subnet

./: .gitignore  .gitmodules  COMPONENT_PROMPT.md  COMPONENT_TEMPLATE.md  Cargo.toml  PROGRESS.md  README.md  config.yaml  down.sh  install.sh
crates/chain-api/: Cargo.toml  setup_commune_env.sh
crates/chain-api/src/: commune.rs  commune_rpc.py  lib.rs
crates/chain-api/tests/: commune_integration_test.rs
crates/docker-manager/: ARCHITECTURE.md  Cargo.toml  PROGRESS.md
crates/docker-manager/src/: lib.rs
crates/interface/: ARCHITECTURE.md  Cargo.toml  PROGRESS.md
crates/interface/interface-core/: Cargo.toml
crates/interface/interface-core/src/: lib.rs
crates/miner/: Cargo.toml
crates/miner/src/: config.rs  docker.rs  lib.rs  metrics.rs  miner.rs  retry.rs  stake.rs  status.rs
crates/miner/src/tests/: config_tests.rs  docker_tests.rs  metrics_tests.rs  miner_tests.rs  retry_tests.rs  stake_tests.rs  status_tests.rs
crates/miner/src/tests_old/: config_tests.rs  metrics_tests.rs  miner_tests.rs  mod.rs
crates/registrar/: ARCHITECTURE.md  Cargo.toml  PROGRESS.md  README.md  schema.sql
crates/registrar-api/: ARCHITECTURE.md  Cargo.toml  PROGRESS.md
crates/registrar-api/src/: client.rs  lib.rs  main.rs  traits.rs
crates/registrar-core/: ARCHITECTURE.md  Cargo.toml  PROGRESS.md
crates/registrar-core/src/: lib.rs
crates/registrar/.sqlx/: query-3d8e9731543fbc6bd312ce60861f39243e3b23158522338836161819ce578112.json
crates/registrar/docker/base/: Dockerfile  healthcheck.py  module_interface.py
crates/registrar/docker/modules/llm/: Dockerfile  module.py
crates/registrar/docker/scripts/: build.sh  publish.sh
crates/registrar/migrations/: 20250111000000_init_schema.sql
crates/registrar/src/: docker.rs  interface.rs  lib.rs  main.rs  module.rs  registry.rs  verification.rs
crates/registrar/src/api/: modules.rs
crates/registrar/src/commands/: env.rs  ingest.rs  install.rs  mod.rs  register.rs  start.rs
crates/validator/: ARCHITECTURE.md  Cargo.toml  PROGRESS.md
crates/validator/src/: PROGRESS.md  api.rs  lib.rs  main.rs
migrations/: 20250115000001_initial.sql  20250127000001_modules.sql
src/: main.rs
src/interface/: mod.rs
src/interface/api/: PROMPT.md  mod.rs
src/interface/api/handlers/: miner.rs  mod.rs  registrar.rs  validator.rs
src/interface/api/ws/: metrics.rs  mod.rs  status.rs
src/interface/cli/: PROMPT.md  mod.rs
src/interface/cli/commands/: mod.rs
src/interface/core/: PROMPT.md  auth.rs  db.rs  error.rs  mod.rs
src/interface/core/environment/: PROMPT.md  config.rs  docker.rs  error.rs  mod.rs  tests.rs
src/interface/core/models/: miner.rs
src/interface/core/services/: miner.rs  mod.rs
src/interface/core/tests/: miner_integration_tests.rs  miner_test_utils.rs  mod.rs
src/interface/gui/: PROMPT.md  mod.rs
src/interface/gui/components/: miner.rs  mod.rs  registrar.rs  validator.rs
src/interface/gui/templates/components/miner/: dashboard.html  stake_form.html
src/interface/gui/templates/components/registrar/: module_form.html  module_list.html
src/interface/gui/templates/components/validator/: config_form.html  dashboard.html
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/src/tests/: docker.rs  registrar.rs  validator.rs
