[package]
name = "synapse-subnet"
version = "0.1.0"
edition = "2021"
authors = ["Synapse Team"]
description = "A modular validator-miner framework for blockchain subnets"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
assert_matches = "1.5"

[workspace]
members = [
    "crates/validator",
    "crates/miner",
    "crates/registrar",
    "crates/chain-api", "crates/registrar-api",
]
