[package]
name = "synapse-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Crypto & Auth
substrate-interface = "0.9"
sp-core = "24.0"
sp-runtime = "24.0"

# Frontend
askama = "0.12"
htmx-rs = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[workspace]
members = [
    "interface-cli",
    "interface-api",
    "interface-gui",
    "interface-core",
]
