[package]
name = "miner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
bollard = "0.15"
thiserror = "1.0"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
assert_matches = "1.5"
