[package]
name = "synapse-registrar-api"
version = "0.1.0"
edition = "2021"

[dependencies]
synapse-registrar = { path = "../registrar" }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["trace"] }
tower = { version = "0.4", features = ["util"] }
thiserror = "1.0"
async-trait = "0.1"
hyper = { version = "1.0", features = ["full"] }

[[bin]]
name = "synapse-registrar-api"
path = "src/main.rs"
