[package]
name = "registrar-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.4", features = ["trace"] }
tower = { version = "0.4", features = ["util"] }
async-trait = "0.1"
hyper = { version = "1.0", features = ["full"] }
axum = { version = "0.6", features = ["headers"] }
registrar-core = { path = "../registrar-core" }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"

[[bin]]
name = "registrar-api"
path = "src/main.rs"
