[package]
name = "registrar-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "time"] }
time = { version = "0.3", features = ["serde"] }
async-trait = "0.1"
