[package]
name = "registrar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
base64 = "0.21"
sha2 = "0.10"
tempfile = "3.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
git2 = "0.18"
async-trait = "0.1"
registrar-core = { path = "../registrar-core" }
url = "2.4"
pyo3 = { version = "0.20", features = ["extension-module"] }
dialoguer = "0.11"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros", "runtime-async-std-rustls"] }
time = { version = "0.3", features = ["serde"] }
docker-manager = { path = "../docker-manager" }
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
assert_matches = "1.5"
