[package]
name = "validator"
version = "0.1.0"
edition = "2021"

[dependencies]
docker-manager = { path = "../docker-manager" }
registrar-api = { path = "../registrar-api" }
registrar = { path = "../registrar" }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
assert_matches = "1.5"
wiremock = "0.5"
