[package]
name = "validator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tracing = "0.1"
async-trait = "0.1"
axum = "0.7"
tower-http = "0.5"
dotenv = "0.15"
bollard = "0.15"
base64 = "0.21"
sha2 = "0.10"
tempfile = "3.8"
registrar = { path = "../registrar" }
registrar-api = { path = "../registrar-api" }
docker-manager = { path = "../docker-manager" }

[dev-dependencies]
mockall = "0.11"
assert_matches = "1.5"
wiremock = "0.5"
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
