[package]
name = "synapse-subnet-e2e-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
zangief = { git = "https://github.com/hydra-dynamix/zangief" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
reqwest = { version = "0.11", features = ["json"] }
